--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Chat App</string>
+
+    <string name="email_field">Email</string>
+    <string name="password_field">Password</string>
+
 </resources>
