--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="name_field">Name</string>
     <string name="email_field">Email</string>
     <string name="password_field">Password</string>
+    <string name="register_btn_text">Enter</string>
 
 </resources>
