--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="error_field_required">Required</string>
+
 </resources>
